distribution先を設定
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/hotchpotch/dev/trunk/coopie@68 ac04e864-1e22-0410-bbb8-8cc9166c4c4a