@@ -22,6 +22,22 @@
             <updateReleaseInfo>true</updateReleaseInfo>
           </configuration>
         </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <includes>
+              <include>**/*Test.java</include>
+            </includes>
+            <!--
+            <argLine>
+              -Xmx384m -XX:PermSize=128m -XX:MaxPermSize=256m
+            </argLine>
+             -->
+            <disableXmlReport>true</disableXmlReport>
+            <failIfNoTests>false</failIfNoTests>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -62,6 +78,21 @@
       <url>http://maven.t2framework.org/maven2</url>
     </repository>
   </repositories>
+
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>hotchpotch.sourceforge.jp</id>
+      <name>hotchpotch.sourceforge.jp</name>
+      <url>scp://shell.sourceforge.jp/home/groups/h/ho/hotchpotch/htdocs/maven2</url>
+    </repository>
+    <snapshotRepository>
+      <uniqueVersion>true</uniqueVersion>
+      <id>hotchpotch.sourceforge.jp</id>
+      <name>hotchpotch.sourceforge.jp snapshot</name>
+      <url>scp://shell.sourceforge.jp/home/groups/h/ho/hotchpotch/htdocs/maven2-snapshot</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <dependencies>
     <dependency>
